--- a/requirements_web_demo.txt
+++ b/requirements_web_demo.txt
@@ -1,7 +1,7 @@
 # Core dependencies
 gradio==5.23.1
 gradio_client==1.8.0
-qwen-omni-utils==0.0.4
+qwen-omni-utils
 
 # Optional dependency
 # Uncomment the following line if you need flash-attn
@@ -23,5 +23,4 @@ modelscope_studio==1.2.2
 transformers==4.52.3
 accelerate
 av
-deepspeed
 decord
